--- a/src/app/views/auth/login.njk
+++ b/src/app/views/auth/login.njk
@@ -1,7 +1,8 @@
 {% extends "_layouts/auth.njk" %}
 
 {% block body %}
-  <form action="/" method="post">
+  <form action="/login" method="post">
+    <img src="/images/logo.svg" height="42">
 
     <input type="email" name="email" id="email" placeholder="Seu e-mail">
     <input type="password" name="password" id="password" placeholder="Senha secreta">
