--- a/src/app/views/auth/login.njk
+++ b/src/app/views/auth/login.njk
@@ -4,6 +4,8 @@
   <form action="/login" method="post">
     <img src="/images/logo.svg" height="42">
 
+    {% include "_partials/flash.njk"%}
+
     <input type="email" name="email" id="email" placeholder="Seu e-mail">
     <input type="password" name="password" id="password" placeholder="Senha secreta">
 
